src/main/default/objects/Work_Order_Task__c/Work_Order_Task__c.object-meta.xml
<CustomObject>
    <label>Work Order Task</label>
    <nameField>
        <displayFormat>WT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>