src/main/default/objects/Work_Order_Task__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Order Tasks</relationshipLabel>
    <relationshipName>Work_Order_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>