src/main/default/objects/Work_Order_Task__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <precision>16</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>